Image issue on mobile

--- a/src/scss/_bodytext.scss
+++ b/src/scss/_bodytext.scss
@@ -710,7 +710,7 @@ body {
 
           img#postimage {
             width: 100%;
-            height: auto;
+            height: 0;
             border-radius: 25px;
           }
           video#tweetvid {
